--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "json-refs",
-  "version": "3.0.13",
-  "description": "Various utilities for JSON References (http://tools.ietf.org/html/draft-pbryan-zyp-json-ref-03).",
+  "name": "json-refs-windows-fixed",
+  "version": "3.0.13-patched",
+  "description": "Fork of 'json-refs'(https://github.com/whitlockjc/json-refs) with fixes for Windows",
   "main": "index.js",
   "scripts": {
     "gulp": "gulp",
     "test": "gulp test"
   },
   "author": {
-    "name": "Jeremy Whitlock",
-    "email": "jwhitlock@apache.org",
-    "url": "https://github.com/whitlockjc"
+    "name": "Jeremy Whitlock"
   },
   "contributors": [],
   "engines": {
@@ -33,7 +31,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/whitlockjc/json-refs.git"
+    "url": "https://github.com/IvanBiletskiy/json-refs-windows-fixed.git"
   },
   "keywords": [
     "json"
@@ -55,7 +53,7 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-mocha": "~3.0.1",
     "gulp-replace": "^1.0.0",
-    "jsdoc": "^3.5.5",
+    "jsdoc": "^3.6.3",
     "karma": "^3.1.4",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
@@ -70,8 +68,8 @@
   "dependencies": {
     "commander": "~2.19.0",
     "graphlib": "^2.1.7",
-    "js-yaml": "^3.13.0",
-    "lodash": "^4.17.11",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.15",
     "native-promise-only": "^0.8.1",
     "path-loader": "^1.0.10",
     "slash": "^2.0.0",
